# zero-trust-secrets

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  SECURITY.md  VERIFICATION.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/vaultcore/: Cargo.toml
crates/vaultcore/src/: crypto.rs  envelope.rs  flow.rs  hardening.rs  lib.rs  memlock.rs  passgen.rs  recovery.rs  secret.rs  strength.rs  vault.rs
crates/vaultcore/src/keyprovider/: cng_pcp.rs  mod.rs  recovery.rs  stubs.rs
crates/vaultcore/tests/: codec_fuzz.rs  fuzz_support_oracle.rs  vault_proptest.rs
crates/vaultctl/: Cargo.toml
crates/vaultctl/src/: clip.rs  main.rs  prompt.rs
crates/vaultctl/tests/: cli.rs
crates/vaultgui/: Cargo.toml
crates/vaultgui/src/: anticapture.rs  autolock.rs  clipboard.rs  dialog.rs  hello.rs  input.rs  leaktest.rs  lib.rs  main.rs  prefs.rs  session.rs
crates/vaultgui/src/watcher/: mod.rs
crates/vaultgui/ui/: app.slint  create.slint  settings.slint  theme.slint  unlock.slint  vault.slint  widgets.slint
docs/: OPENSSF_BASELINE.md
docs/superpowers/plans/: 2026-07-14-zero-trust-secrets-core.md  2026-07-16-slice2-gui.md  2026-07-17-gui-visual-overhaul.md
docs/superpowers/specs/: 2026-07-14-zero-trust-secrets-core-design.md  2026-07-16-slice2-gui-design.md  2026-07-17-gui-visual-overhaul-design.md  2026-07-18-security-hardening-program-design.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: locked_vault_load.rs  v2_to_v3_migration.rs  vault_header_parse.rs
verify/: TEST_PLAN.md  run.sh  scan_dump.py
verify/dumper/: Cargo.toml
verify/dumper/src/: main.rs
