[workspace]
resolver = "2"
members = ["crates/vaultcore", "crates/vaultctl", "verify/dumper"]

[workspace.package]
edition = "2021"
rust-version = "1.96"

[workspace.dependencies]
zeroize = { version = "1", features = ["derive"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
subtle = "2"
getrandom = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1"
proptest = "1"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Memory",
  "Win32_Security_Cryptography",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Threading",
  # MiniDumpWriteDump is gated behind these (in addition to Win32_System_Memory).
  "Win32_Storage_FileSystem",
  "Win32_System_Kernel",
] }
