[workspace]
resolver = "2"
members = ["crates/vaultcore", "crates/vaultctl", "crates/vaultgui", "verify/dumper"]
default-members = ["crates/vaultcore", "crates/vaultctl", "verify/dumper"]

[workspace.package]
edition = "2021"
rust-version = "1.96"

# Release-build hardening (hardening program, phase 2).
#
# NOTE on panic strategy: we deliberately KEEP the default `panic = "unwind"`,
# NOT "abort". Unwinding runs every `ZeroizeOnDrop` destructor on the way out, so
# a panic still scrubs secrets from RAM — which is this project's central claim.
# `abort` would skip destructors and leave plaintext in the dying process's pages.
[profile.release]
overflow-checks = true   # trap integer overflow (defends the untrusted-header parser) — panics unwind + zeroize
lto = true               # whole-program optimization; also shrinks the attack surface
codegen-units = 1        # better optimization determinism at the cost of build time
strip = true             # ship no PDB/symbol info

[workspace.dependencies]
zeroize = { version = "1", features = ["derive"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
subtle = "2"
getrandom = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1"
proptest = "1"
slint = "1"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Memory",
  "Win32_Security_Cryptography",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Threading",
  # MiniDumpWriteDump is gated behind these (in addition to Win32_System_Memory).
  "Win32_Storage_FileSystem",
  "Win32_System_Kernel",
] }
