[package]
name = "vaultcore"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
# Internal workspace crate only; never published to crates.io.
publish = false

[features]
# Exposes `vault::fuzz_support`, which builds well-formed vault images (including
# legacy-v2 ones, which production code can only READ) for the coverage-guided
# fuzzer. Non-default and never enabled by vaultctl/vaultgui, so this cannot
# reach a shipped binary. See fuzz/README.md.
fuzzing = []

[dependencies]
zeroize.workspace = true
chacha20poly1305.workspace = true
argon2.workspace = true
hkdf.workspace = true
sha2.workspace = true
subtle.workspace = true
getrandom.workspace = true
rand_core.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
proptest.workspace = true
