[package]
name = "vaultcore"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# Internal workspace crate only; never published to crates.io.
publish = false

# `cfg(kani)` is set by the Kani model checker, not by cargo, so rustc does not
# know it on an ordinary build. Declare it rather than letting every build emit
# an unexpected-cfg warning.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
# Exposes `vault::fuzz_support`, which builds well-formed vault images (including
# legacy-v2 ones, which production code can only READ) for the coverage-guided
# fuzzer. Non-default and never enabled by vaultctl/vaultgui, so this cannot
# reach a shipped binary. See fuzz/README.md.
fuzzing = []

[dependencies]
zeroize.workspace = true
chacha20poly1305.workspace = true
argon2.workspace = true
hkdf.workspace = true
sha2.workspace = true
subtle.workspace = true
getrandom.workspace = true
rand_core.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
proptest.workspace = true
