[package]
name = "dumper"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# Internal verification-harness crate only; never published to crates.io.
publish = false

[dependencies]
getrandom = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
